--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 * {
-    border 1px solid red;
     font-family: Tahoma, sans-serif, 'Times New Roman', Times, serif;
     color: #077fb3;
+    
 }
 
 p {
@@ -10,12 +10,21 @@ p {
 
 .topnav {
      float: right;
-     padding-top: 10px;
+     padding-top: 30px;
+     padding-right: 35px;
+     background-color: white;
 }
 
 .topnav a {
     display: inline;
     padding: 14px 16px;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #034662
 }
 
 img {
@@ -25,24 +34,39 @@ img {
 
 .name {
     font-size: 20px;
+    font-weight: bold;
+    margin-top: 50px;
 }
 
 .menu {
-    padding-left: 10px;
+    background-color: white;
+    padding-left: 45px;
     padding-top: 10px;
 }
 
 body {
-    background-color: white;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 90px;
+    margin-right: 90px;
     border-left: 2px solid #077fb3;
     border-right: 2px solid #077fb3;
-    box-shadow: -10px 0px 20px #077fb3, 10px 0px 20px #077fb3;
+    box-shadow: -10px 0px 5px #077fb3, 10px 0px 5px #077fb3;
 }
 
 section {
     padding: 10px 50px 10px 50px;
+}
+
+#skills, #connect, #messages {
+    background-color: #d5e8f0;
+}
+
+#about, #experience, #message {
+    background-color: white;
+}
+
+#messages {
+    text-align: center;
+    font-size: 20px;
 }
 
 h1, h2 {
@@ -51,10 +75,12 @@ h1, h2 {
     font-size: 28px;
     text-align: left;
     background-color: #fafafa;
-    box-shadow: -3px 6px 3px #077fb3;
-    border-left: 1px solid #077fb3;
-    border-bottom: 1px solid #077fb3;
+    border-top: 1px solid #077fb3;
+    border-right: 1px solid #077fb3;
+    border-left: 2px solid #077fb3;
+    border-bottom: 10px solid #077fb3;
     display: block;
+    border-radius: 23px;
 }
 
 li {
@@ -75,6 +101,7 @@ ul {
     padding: 2px;
     border: 2px solid #077fb3;
     box-shadow: -2px 3px 3px #077fb3;
+    border-radius: 10px;
 }
 
 .experienceList{
@@ -90,6 +117,8 @@ ul {
     background-color: #fafafa;
     border: 1px solid #077fb3;
     margin-bottom: 10px;
+    border-radius: 10px;
+    background-color: #d5e8f0;
 }
 
 .jobDate {
@@ -100,42 +129,62 @@ ul {
 }
 
 button {
-    background-color: #b456fc;
-    color: black;
-    padding: 15px 32px;
-    font-size: 16px;
+    background-color: #077fb3;
+    font-weight: bold;
+    font-size: 18px;
+    margin-right: 20px;
+    padding: 5px;
+    border: 2px solid white;
+    border-radius: 10px;
+    color: white;
 
 }
 
 label {
-   font-size: 16px;
-   color: black; 
+   font-size: 20px; 
 }
 
 input {
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
     margin:8px 0;
     box-sizing: border-box;
-    color: black;
+    font-size: 20px;
+    border-radius: 10px;
+    border: solid 2px #077fb3;
+    border-bottom: solid 5px #077fb3;
 }
 
 textarea {
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
+    font-size: 20px;
+    border-radius: 10px;
+    border: solid 2px #077fb3;
+    border-bottom: solid 5px #077fb3;
 }
 
 footer {
-    background-color: aqua;
+    /* background: rgba(7, 127, 179, .1); */
+    background-color: #d5e8f0;
+    text-align: center;
     padding: 8px;
 }
 
-.thisForm {
+/* .thisForm {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding-left: 100px;
+} */
+
+form {
+    max-width: 64em;
+    margin: auto;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 600px) {
