--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ p {
      float: right;
      padding-top: 30px;
      padding-right: 35px;
-     background-color: white;
+     background-color: #d5e8f0;
 }
 
 .topnav a {
@@ -30,6 +30,7 @@ a:hover {
 img {
     width: 80px;
     height: auto;
+    border-radius: 150px;
 }
 
 .name {
@@ -39,7 +40,7 @@ img {
 }
 
 .menu {
-    background-color: white;
+    background-color: #d5e8f0;
     padding-left: 45px;
     padding-top: 10px;
 }
@@ -56,11 +57,11 @@ section {
     padding: 10px 50px 10px 50px;
 }
 
-#skills, #connect, #messages {
+#projects, #message, #about {
     background-color: #d5e8f0;
 }
 
-#about, #experience, #message {
+#skills, #experience, #messages {
     background-color: white;
 }
 
@@ -73,7 +74,6 @@ h1, h2 {
     padding: 5px;
     font-weight: 100px;
     font-size: 28px;
-    text-align: left;
     background-color: #fafafa;
     border-top: 1px solid #077fb3;
     border-right: 1px solid #077fb3;
@@ -81,6 +81,9 @@ h1, h2 {
     border-bottom: 10px solid #077fb3;
     display: block;
     border-radius: 23px;
+    text-align: center;
+    margin-left: 300px;
+    margin-right: 300px;
 }
 
 li {
@@ -93,16 +96,34 @@ ul {
     padding-left: 0px;
 }
 
+.skillsList {
+    text-align: center;
+}
+
 .skillsList li {
     display: inline;
     background-color: white;
     font-size: 18px;
     margin-right: 20px;
-    padding: 2px;
+    padding: 4px;
     border: 2px solid #077fb3;
     box-shadow: -2px 3px 3px #077fb3;
     border-radius: 10px;
+    align-items: center;
+    text-align: center;
+    font-weight: bold;
 }
+
+.projectsList {
+    text-align: center;
+    font-size: 18px;
+    padding-top: 15px;
+}
+
+.projectsList a {
+    text-decoration: none;
+}
+
 
 .experienceList{
     display: flex;
@@ -173,6 +194,13 @@ footer {
     padding: 8px;
 }
 
+footer img {
+    height: 40px;
+    width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 /* .thisForm {
     display: flex;
     flex-direction: column;
@@ -187,10 +215,25 @@ form {
     font-weight: bold;
 }
 
-@media only screen and (max-width: 600px) {
-    .experiencePara, .aboutPara, .aboutHead, .experienceHead {
+@media screen and (max-width: 1000px) {
+    div.topnav {
+      display: none;
+    }
+
+    body {
+        margin: 0px;
+        border: none;
+    }
+
+    h1, h2 {
         margin-left: 0px;
         margin-right: 0px;
-        padding: 0px 0px 0px 0px;
+        margin-top: 5px;
+
     }
-}
+
+    .myPhoto {
+        display: none;
+    }
+
+  }
